# hardy-monitor

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  config.toml  docker-compose.dev.yaml
.cargo/: config.toml
.sqlx/: query-307405d242cfc5b4b7dacfe6c2cfa2fe7d2a4a82cfe02169758aebff96c70045.json  query-38157e989a2dfa50f8515f4daebaf34aafefe30bc8fcf1b601be3f0de7be4d68.json  query-4e3263a6ff92dbad74c7a9838e6805cee4609a9c145ffe8757a96f0c7f02657d.json  query-8ac2d87773d5a80a68052e02bdae1fd87bb12c27d70a30b7f14ce4f293f70e3c.json  query-8b4bc16fdd1dfa3466c67842cad9246ca73803f98583ef4041bf905d0c8d8d93.json  query-a2a548038d183912ba47d955c7e536204e104835f7fcfef50d809f1cdf85e979.json
migrations/: 20240101000000_create_occupancy_logs.sql
src/: analytics.rs  api.rs  app.rs  config.rs  db.rs  lib.rs  main.rs  repair.rs  schedule.rs  style.rs  traits.rs
src/ml/: confidence.rs  features.rs  mod.rs  model.rs  persistence.rs  training.rs
src/widgets/: comparison_chart.rs  gauge.rs  heatmap.rs  history_chart.rs  mod.rs
tests/: api.rs  app_logic.rs  database.rs
